--- a/assets/style.css
+++ b/assets/style.css
@@ -1,77 +1,81 @@
-img{
+img {
 
     width: 90%;
-    opacity:0.8;
-    height:80%;
-    border-radius:5px;
+    opacity: 0.8;
+    height: 80%;
+    border-radius: 5px;
 }
 
 
 
 canvas {
-    background-color:black;
-    position:absolute;
-    width: 100%; height: 100%;
-    bottom: 0px; left: 0px;
-    display:none    
-  
+    background-color: black;
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    bottom: 0px;
+    left: 0px;
+    display: none
 }
 
-.maincontent{
-  
-    color:white;
+.maincontent {
+
+    color: white;
     font-family: 'Literata', serif;
-    display:none;
-  }
+    display: none;
+}
 
-  .begin{
-      background-color:black;
-      font-family: 'Literata', serif;
-      color:white;
-      display:none;
-  }
+.begin {
+    background-color: black;
+    font-family: 'Literata', serif;
+    color: white;
+    display: none;
+}
 
 
-html,body {
+html,
+body {
     background-color: black;
     color: #fff;
     width: 100%;
     height: 100%;
     margin: 0;
     padding: 0;
-    overflow: hidden; 
-  
+    overflow: hidden;
+
 }
 
-.start{
-    background-color:black;
-    display:none;
-    opacity:0.6;
-    margin-top:220px;
-    text-align:center;
-   
-}
-.start:hover{
-    cursor:pointer;
-    opacity:1.0
+.start {
+    background-color: black;
+    display: none;
+    opacity: 0.6;
+    margin-top: 220px;
+    text-align: center;
+
 }
 
-.header{
-    text-align:center;
+.start:hover {
+    cursor: pointer;
+    opacity: 1.0
+}
+
+.header {
+    text-align: center;
 }
 
 
-.main{
-  
-    color:white;
+.main {
+
+    color: white;
     font-family: 'Literata', serif;
-  
-  }
 
-  a:link {
-    color:white;
+}
+
+a:link {
+    color: white;
     font-family: 'Literata', serif;
-  }
-  .list-group-item{
-      color:black
-  }
+}
+
+.list-group-item {
+    color: black
+}
