--- a/styles.css
+++ b/styles.css
@@ -253,7 +253,7 @@ iframe {
 
 .banner-image {
   /* The image used */
-  background-image: url('./assets/updated-images/BlakePhotoshoot.JPEG');
+  background-image: url('./assets/updated-images/underdog.jpg');
 
   /* Set a specific height */
   min-height: 700px;
