--- a/styles.css
+++ b/styles.css
@@ -2,18 +2,23 @@ body {
   font-family: 'Roboto', sans-serif;
   /* color: #777; */
   background-image: url('./assets//updated-images/Midnight City.jpg');
+  color: white;
 }
 
 h3,
 h4 {
   margin: 10px 0 30px 0;
   letter-spacing: 10px;
-  font-size: 20px;
-  color: #111;
+  font-size: 18px;
+  color: white;
 }
 
 .container {
   padding: 60px 40px;
+  margin-top: 40px;
+}
+#contact {
+  padding-top: 40px;
 }
 
 .person {
@@ -62,7 +67,7 @@ h4 {
 
 .bg-1 {
   background: #2d2d30;
-  color: #bdbdbd;
+  color: white;
 }
 
 .bg-1 h3 {
@@ -72,7 +77,12 @@ h4 {
 .bg-1 p {
   font-style: italic;
 }
-
+.list-group-item {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  /* background-color: #8c9bb5; */
+}
 .list-group-item:first-child {
   border-top-right-radius: 0;
   border-top-left-radius: 0;
@@ -94,10 +104,15 @@ h4 {
   color: #555;
 }
 
-.btn {
+.btn-stream {
   padding: 10px 20px;
-  background-color: #333;
+  background-color: #8c9bb5;
   color: #f1f1f1;
+  border-radius: 0;
+  transition: 0.2s;
+}
+
+.btn {
   border-radius: 0;
   transition: 0.2s;
 }
@@ -176,7 +191,6 @@ h4,
 }
 
 footer {
-  background-color: #2d2d30;
   color: #f5f5f5;
   padding: 32px;
 }
@@ -218,10 +232,6 @@ textarea {
   margin-bottom: 40px;
 }
 
-/* #store{
-background-color:white;
-color:black;
-} */
 iframe {
   border: 3px solid #777;
   border-radius: 10px;
@@ -285,7 +295,7 @@ iframe {
 .download-section {
   justify-content: center;
   align-items: center;
-  margin-top: 4em;
+  margin-top: 3.5em;
 }
 
 .margin-small {
@@ -298,6 +308,10 @@ iframe {
   padding-right: 2em;
   padding-top: 1em;
   padding-bottom: 1em;
+}
+
+.add-pad-top {
+  padding-top: 16px;
 }
 
 .bg-1 {
@@ -324,4 +338,30 @@ h2 {
 .hvr-grow:active {
   -webkit-transform: scale(1.1);
   transform: scale(1.1);
+}
+
+.fab {
+  color: white;
+  height: 30px;
+  width: 30px;
+  font-size: 20px;
+  margin-bottom: 5px;
+}
+
+.flex-div {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+/* .btn {
+ 
+} */
+
+h1 {
+  color: white;
+}
+
+.black-text {
+  color: black;
 }
