--- a/styles.css
+++ b/styles.css
@@ -270,7 +270,7 @@ iframe {
   min-height: 700px;
 
   /* Create the parallax scrolling effect */
-  background-attachment: fixed;
+  /* background-attachment: fixed; */
   background-position: center;
   background-repeat: no-repeat;
   background-size: cover;
