--- a/styles.css
+++ b/styles.css
@@ -262,18 +262,36 @@ iframe {
   padding: 0px;
 }
 
-.banner-image {
-  /* The image used */
-  background-image: url('./assets/updated-images/underdog.jpg');
+@media (min-width: 600px) {
+  .banner-image {
+    /* The image used */
+    background-image: url('./assets/updated-images/underdog.jpg');
 
-  /* Set a specific height */
-  min-height: 700px;
+    /* Set a specific height */
+    min-height: 700px;
 
-  /* Create the parallax scrolling effect */
-  /* background-attachment: fixed; */
-  background-position: center;
-  background-repeat: no-repeat;
-  background-size: cover;
+    /* Create the parallax scrolling effect */
+    background-attachment: fixed;
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: cover;
+  }
+}
+
+@media (max-width: 600px) {
+  .banner-image {
+    /* The image used */
+    background-image: url('./assets/updated-images/underdog.jpg');
+
+    /* Set a specific height */
+    min-height: 700px;
+
+    /* Create the parallax scrolling effect */
+    /* background-attachment: fixed; */
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: cover;
+  }
 }
 .listen-section {
   background: -webkit-linear-gradient(360deg, #1c1c1c 10%, #494949 360%);
