--- a/styles.css
+++ b/styles.css
@@ -8,7 +8,7 @@ body {
 h3,
 h4 {
   margin: 10px 0 30px 0;
-  letter-spacing: 10px;
+  letter-spacing: 6px;
   font-size: 18px;
   color: white;
 }
@@ -17,6 +17,10 @@ h4 {
   padding: 60px 40px;
   margin-top: 40px;
 }
+/* .contact-container {
+  margin-top: 40px;
+  padding-top: 60px;
+} */
 #contact {
   padding-top: 40px;
 }
@@ -104,6 +108,9 @@ h4 {
   color: #555;
 }
 
+/* btn {
+  border-radius: 4px;
+} */
 .btn-stream {
   padding: 10px 20px;
   background-color: #8c9bb5;
@@ -150,7 +157,7 @@ h4,
 }
 
 .navbar {
-  font-family: Montserrat, sans-serif;
+  /* font-family: Montserrat, sans-serif; */
   margin-bottom: 0;
   background-color: #2d2d30;
   border: 0;
@@ -202,10 +209,6 @@ footer a {
 footer a:hover {
   color: #777;
   text-decoration: none;
-}
-
-.form-control {
-  border-radius: 0;
 }
 
 textarea {
@@ -382,4 +385,20 @@ h1 {
 
 .black-text {
   color: black;
+}
+
+.form-control {
+  border-radius: 0px;
+  min-height: 40px;
+}
+
+.message-contact {
+  min-height: 100px;
+}
+
+.required:after {
+  content: '*';
+  color: white;
+  padding-left: 4px;
+  font-size: 12px;
 }
