--- a/styles.css
+++ b/styles.css
@@ -325,13 +325,13 @@ iframe {
     background-size: cover;
   }
 }
-/* .listen-section {
+.listen-section {
   background: -webkit-linear-gradient(360deg, #1c1c1c 10%, #494949 360%);
   background: -moz-linear-gradient(360deg, #1c1c1c 10%, #494949 360%);
   background: linear-gradient(360deg, #1c1c1c 10%, #494949 360%);
 
   width: 100%;
-} */
+}
 .listen-section img {
   height: 300px;
   width: 100%;
