--- a/styles.css
+++ b/styles.css
@@ -3,7 +3,13 @@ body {
   /* color: #777; */
   background-image: url('./assets//updated-images/Midnight City.jpg');
   color: white;
+  min-height: 100vh;
+  margin: 0;
+  padding: 0;
+  display: flex;
+  flex-direction: column;
 }
+
 H3 {
   margin: 10px 0 30px 0;
 }
@@ -17,6 +23,7 @@ h4 {
 .container {
   padding: 60px 40px;
   margin-top: 40px;
+  flex-grow: 1;
 }
 /* .contact-container {
   margin-top: 40px;
@@ -28,9 +35,14 @@ h4 {
 }
 #tour {
   padding-top: 0px;
+  padding-bottom: 50px;
 }
 #about {
   font-weight: 600;
+}
+
+#merch {
+  padding-bottom: 80px;
 }
 
 #contact {
